overflow-wrap to prevent weirdness. Website is now decent at ANY view width, although you'd be a madman to try that because all the words are now spanning several lines

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
 html {
 	font-family: sans-serif;
+	overflow-wrap: break-word;
   	height: 100%;
   	width: 100%;
 	--fakeblack: #3d3d3d;
